--- a/style.css
+++ b/style.css
@@ -1,227 +1,80 @@
+/* Imports */
+
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');  
+
+/* Navbar */
+
+.navbar
+{
+    background-color: #51565c;
+    display: flex;
+    justify-content: right;
+    padding: 1em;
+    outline: 0.5em solid #51565c;
+}
+
+.navbar a
+{
+    font-size: 36px;
+    color: #fff;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+/* Sidebar */
+
+#sidebar 
+{
+    width: 200px;
+    height: 100%;
+    background-color: #51565c;
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding: 20px;
+    transition: left 0.5s;
+    outline: 2px solid #000;
+}
+
+#sidebar-header 
+{
+    text-align: center;
+}
+
+#sidebar-links, #sidebar-footer 
+{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+#sidebar-footer 
+{
+    position: absolute;
+    bottom: 3em;
+    width: 100%;
+}
+
+/* Body */
+
+/* Footer */
+
+/* Others */
+
 body
 {
     font-family: 'Open Sans', sans-serif;
     background-color: #cacaca;
 }
 
-.navbar 
-{
-    outline: solid;
-    outline-width: 0.5em;
-    outline-color: #bebdbd;
-    background-color: #bebdbd;
-    padding: 2em;
-    padding-left: auto;
-    padding-right: auto;
-    display: flex;
-    justify-content: space-between;
-}
-
-form
-{
-    display: flex;
-    align-items: center;
-}
-
-input[type="text"]
-{
-    padding: 10px;
-    border-radius: 20px 0 0 20px;
-    border: none;
-    width: 60%;
-    margin-right: 10px;
-}
-
-button
-  {
-    padding: 10px 20px;
-    background-color: #ff7777;
-    color: white;
-    border-radius: 0 20px 20px 0;
-    border: none;
-    cursor: pointer;
-}
-  
-
-.hero 
-{
-    margin-top: 3em;
-    color: #000;
-    display: grid;
-    justify-content: center;
-    text-align: center;
-    line-height: 1;
-}
-
-.heroTitle
-{
-    color: #ff7777;
-    display: grid;
-    justify-content: center;
-    text-align: center;
-    letter-spacing: 3px;
-    text-shadow: 
-        0 0 10px #ff7777, 
-        0 0 20px #ff7777, 
-        0 0 30px #ff7777;
-}
-
-.store 
-{
-    display: flex;
-    justify-content: space-evenly;
-    color: #000;
-    align-items: center;
-    text-align: center;
-}
-
-.storeBestSeller
-{
-    height: 250px;
-    width: 200px;
-    color: #000;
-    border-radius: 10px;
-}
-
-.storeImage
-{
-    width: 100px;
-    height: 100px;
-    border-radius: 10px;
-    overflow: hidden;
-}
-
-.storeImage img
-{
-    width: 300px;
-}
-
-.buy 
-{
-    background-color: #ff7777;
-    color: white;
-    padding: 0.25em 2em;
-    border-radius: 10px;
-    font-size: 20px;
-    text-align: center;
-    text-decoration: none;
-}
-
-.buy:hover 
-{
-    text-decoration: none;
-}
-
-.buyBestSeller 
-{
-    background-color: #ff1c1c;
-    border-radius: 10px;
-    color: #fff;
-    padding: 0.25em 2em;
-    font-size: 20px;
-    text-align: center;
-    text-decoration: none;
-    animation: neon 1s ease-in-out infinite;
-}
-@keyframes neon {
-    0% {
-          box-shadow: 0 0 10px #ff1c1c;
-    }
-    50% {
-          box-shadow: 0 0 20px #ff1c1c;
-    }
-    100% {
-          box-shadow: 0 0 10px #ff1c1c;
-    }
-}
-
-.buyBestSeller:hover 
-{
-    text-decoration: none;
-}
-
-.teamBox 
-{
-    display: flex;
-    justify-content: space-evenly;
-    padding: 2em;
-}
-
-.team 
-{
-    color: #000;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.teamImage
-{
-    width: 50px;
-    margin-right: 1em;
-}
-
-footer
-{
-    clear: both;
-    bottom: 0px;
-    width: 100%;
-    height: 15em;
-}
-
-#footer 
-{
-    background-color: #bebdbd;
-    color: #000;
-    padding-top: 10px;
-    padding: auto;
-    text-align: center;
-    outline: solid;
-    outline-color: #bebdbd;
-    outline-width: 0.5em;
-}
-
-.footerLink 
-{
-    background-color: #bebdbd;
-    color: #000;
-    padding: 2rem;
-    text-align: center;
-
-    display: flex;
-    justify-content: space-around;
-}
-
 a
 {
-    color: #000;
+    color:#fff;
     text-decoration: none;
-    font-weight: bold;
 }
 
 a:hover
 {
+    color:#fff;
     text-decoration: underline;
-}
-
-.hr 
-{
-    border-color: #ff7777;
-    width: 100em;
-}
-
-.bold 
-{
-    font-weight: bold;
-}
-
-.grey
-{
-    color: #969090;
-}
-
-.middle
-{
-    text-align: center;
 }
